<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tmdb" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:id="@+id/sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:scrollbarSize="0dp"
        android:scrollIndicators="none"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingBottom="16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_backdrop"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@tools:sample/avatars" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary_background" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/tv_backdrop_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_backdrop_caption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_backdrop_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/caption"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_backdrop_welcome"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container_trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_backdrop">
                <TextView
                    android:id="@+id/tv_title_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/trending"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dracula"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/btn_see_more_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_more"
                    android:textColor="@color/dracula"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_trending"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_trending"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending_movies"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    android:scrollbarSize="0dp"
                    android:scrollIndicators="none"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_trending"
                    tools:itemCount="5"
                    tools:listitem="@layout/card_movie_horizontal"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_trending"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_trending"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary_background" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_container_trending">
                <TextView
                    android:id="@+id/tv_title_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/popular"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dracula"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/btn_see_more_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_more"
                    android:textColor="@color/dracula"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_popular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_popular"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_movies"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    android:scrollbarSize="0dp"
                    android:scrollIndicators="none"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_popular"
                    tools:itemCount="5"
                    tools:listitem="@layout/card_movie_horizontal"/>
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_popular"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_popular"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary_background" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_container_popular">
                <TextView
                    android:id="@+id/tv_title_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/upcoming"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dracula"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/btn_see_more_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_more"
                    android:textColor="@color/dracula"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_title_upcoming"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_upcoming"
                    tools:ignore="TouchTargetSizeCheck" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming_movies"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    android:scrollbarSize="0dp"
                    android:scrollIndicators="none"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_upcoming"
                    tools:itemCount="5"
                    tools:listitem="@layout/card_movie_horizontal"/>
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_upcoming"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary_background" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/message_error_occurred"
            android:textSize="16sp"
            android:textColor="@color/dracula"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_retry" />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error_message"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>